<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wellness Genius</string>
    <string name="app_logo">App Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hello_user">Hello, User!</string>
    <string name="today_s_stats">Today\'s Stats</string>
    <string name="steps">Steps</string>
    <string name="calories">Calories</string>
    <string name="bpm">BPM</string>
    <string name="bio_age">Bio Age</string>
    <string name="dashboard">Dashboard</string>
    <string name="activities">Activities</string>
    <string name="challenges">Challenges</string>
    <string name="profile">Profile</string>
</resources>
